# AC_AIAgent

./: call_function.py  config.py  main.py  prompts.py  pyproject.toml  tests.py  voice.py
calculator/: lorem.txt
functions/: config.py  get_file_content.py  get_files_info.py  write_file.py
src/functions/: get_file_content.py  run_python_file.py
